<resources>
    <string name="app_name">DpOlderAdults</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Desgin Patterns</string>
    <string name="nav_header_subtitle">19140886@studentmail.ul.ie</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_large_Content">Large Content</string>
    <string name="menu_avoid_links">Avoid Links</string>

    <string name="menu_verticalScroll">Vertical Scrolling</string>
    <string name="menu_adblock">AdBlock</string>
    <string name="title_material_metaphor">Design Patterns for Older Adults</string>
    <string name="description_material_metaphor">App provides design patterns require to be introduced in application when developing for Elderly People</string>
    <string name="title_material_bold"> App Introduction</string>
    <string name="description_material_bold">App with introduction makes it easier to understand how to use this App.</string>
    <string name="menu_app_into">App Intro</string>
    <string name="menu_center_info">Center Content</string>
    <string name="center_content_explanation">Placing information in the center helps older people to access it easily without getting distracted with other content</string>
    <string name="field_click_details">Clicking on fields below will pop up the right keyboard depending on the field.</string>
    <string name="title_center_information">Require Content placed in center of the screen.</string>
    <string name="hit_the_button_to_launch_the_application_tutorial">Hit the button to launch the application tutorial</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</string>
    <string name="ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
</resources>