<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/center_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="230dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1">

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="0dp"
                android:ems="10"
                android:hint="Name"
                android:inputType="textPersonName"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="372dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:ems="10"
                android:hint="Address"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="374dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:ems="10"
                android:hint="Phone Number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="0dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="83dp"
            android:layout_marginEnd="2dp"
            android:text="@string/title_center_information"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="150dp"
            android:text="@string/field_click_details"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/center_content_layout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="2dp"
            android:text="@string/center_content_explanation"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>